h1 margin and horizontal scroll fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body,html{
     margin: 0;
     font-family:  'Open Sans', sans-serif;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 ::-webkit-scrollbar {
   width: 10px;
@@ -25,6 +26,7 @@ main{
   color: #bbb0b0; 
 }
 h1{
+  margin-top: 2rem !important;
   margin-bottom: 3.5rem !important;
   letter-spacing: 0.1em !important;
   font-family:'DM Sans', sans-serif;
